[project]
name = "evade84"
version = "0.0.1"
description = "API client for evade84-node"
authors = [
    {name = "jieggii", email = "jieggii@pm.me"},
]
dependencies = [
    "requests>=2.28.1",
    "pydantic>=1.9.1"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]

[tool]
[tool.pdm]
[tool.pdm.scripts]
fmt.shell = "isort ./evade84/ && black ./evade84/"
lint = "flake8 ./evade84/"

[tool.pdm.dev-dependencies]
dev = [
    "flake8>=4.0.1",
    "black>=22.6.0",
    "isort>=5.10.1",
]

[tool.black]
line-length = 105
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 105

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
